# rl_vo

./: .gitignore  Dockerfile  README.md  launch_container.sh  play.py  requirements.txt  train.py
config/: config.yaml  config_eval.yaml
dataloader/: euroc_loader.py  tartan_loader.py  tum_loader.py
env/: svo_wrapper.py
env/utils/: compute_error.py  plotting.py  running_mean_std.py  trajectory_alignment.py  visualization.py
evaluation/: evaluate_runs.py
policies/: attention_policy.py
rl_algorithms/: buffers.py  on_policy_algorithm.py  ppo.py
svo-lib/: .gitignore  CMakeLists.txt  Dockerfile  launch_container.sh  requirements.txt
svo-lib/fast_neon/: CMakeLists.txt
svo-lib/minkindr/minkindr/: CMakeLists.txt
svo-lib/minkindr/minkindr/include/kindr/minimal/implementation/: rotation-quaternion-inl.h
svo-lib/opengv/: CMakeLists.txt
svo-lib/opengv/src/math/: Sturm.cpp
svo-lib/rpg_common/: CMakeLists.txt
svo-lib/svo/: CMakeLists.txt  package.xml
svo-lib/svo/include/svo/: frame_handler_base.h  frame_handler_mono.h  global.h  initialization.h  svo.h
svo-lib/svo/src/: frame_handler_base.cpp  frame_handler_mono.cpp  initialization.cpp  pose_optimizer.cpp  reprojector.cpp
svo-lib/svo_cmake/cmake/Modules/: SvoSetup.cmake
svo-lib/svo_common/: CMakeLists.txt
svo-lib/svo_common/include/svo/common/: frame.h  logging.h  occupancy_grid_2d.h  types.h
svo-lib/svo_common/src/: frame.cpp
svo-lib/svo_direct/: CMakeLists.txt  package.xml
svo-lib/svo_env/: CMakeLists.txt
svo-lib/svo_env/include/svo_env/: svo_env.h  svo_factory.h  svo_vec_env.h  types.h  utils.h  visualizer.h
svo-lib/svo_env/param/: euroc.yaml  kitti.yaml  pinhole.yaml  tartan_test.yaml  tartan_train.yaml
svo-lib/svo_env/src/: pybind_wrapper.cpp  svo_env.cpp  svo_factory.cpp  svo_test.cpp  svo_vec_env.cpp  utils.cpp  visualizer.cpp
svo-lib/svo_img_align/: CMakeLists.txt
svo-lib/svo_tracker/: CMakeLists.txt  package.xml
svo-lib/vikit/vikit_cameras/: CMakeLists.txt
svo-lib/vikit/vikit_common/: CMakeLists.txt
svo-lib/vikit/vikit_solver/: CMakeLists.txt
